# ai-photonic-physical-verification

./: .gitignore  .pre-commit-config.yaml  INSTALLATION.md  PHASE_1_SUMMARY.md  QUICKSTART.md  README.md  TILE_ROI_FIXES.md  install.sh  layout_verification_app.py  main.py  pyproject.toml  requirements.txt  setup_api_key.sh  test_main_roi.py  test_minimal_roi.py  test_roi_detection.py  test_roi_selection.py
core/: __init__.py
core/ai_analyzer/: __init__.py  analysis_engine.py  gemini_client.py  parallel_analyzer.py  prompts.py
core/app_state/: __init__.py  state_manager.py  state_validator.py
core/file_manager/: __init__.py  file_manager.py  gds_loader.py  svg_converter.py  svg_generator.py  svg_parser.py
core/roi_manager/: __init__.py  roi_calculator.py  roi_storage.py
core/threading_manager/: queue_manager.py
core/tile_system/: __init__.py  tile_cache.py  tile_generator.py  tile_splitter.py
scripts/: lint.py
ui/: __init__.py  event_handlers.py  event_handlers_OLD.py  modern_theme.py
ui/components/: __init__.py  analysis_panel.py  file_controls.py  grid_config_panel.py  image_canvas.py  processing_buttons.py  summary_panel.py  tile_review_panel.py
ui/components/canvas/: __init__.py  coordinate_transform.py  grid_overlay.py  image_canvas.py  roi_selector.py  tile_overlay.py
ui/handlers/: __init__.py  base_handler.py  file_handler.py  grid_handler.py  processing_handler.py  roi_handler.py  tile_handler.py
utils/: __init__.py  coordinate_utils.py  image_utils.py  threading_utils.py
